--- a/docs/stories/6.4a.story-session-machine.md
+++ b/docs/stories/6.4a.story-session-machine.md
@@ -11,21 +11,24 @@ Draft
 ## Story
 
 **As a** developer,
-**I want** an XState machine to orchestrate story beat progression,
-**so that** the story mode has predictable, testable state management for word selection and game flow.
+**I want** an XState machine to orchestrate story beat progression with support for multiple beat types (game, choice, narrative, checkpoint),
+**so that** the story mode delivers a dynamic narrative experience with predictable, testable state management.
 
 ## Acceptance Criteria
 
 1. `StorySessionMachine` is created in `machines/story/storySessionMachine.ts`
-2. Machine has all required states: idle, selectingWordList, initializingStory, showingIntro, preparingBeat, playingBeat, beatCompleted, showingCheckpoint, finale
-3. Machine spawns `StoryProgressMachine` as child actor
-4. Context includes: wordList, storyBeats, wordStats, currentPhase, currentWord, currentGameType
-5. Word selection implements two-phase algorithm: assessment (random order) → mastery (prioritize difficult words)
-6. Beat progression logic: cycles through 15-20 beats or until all words mastered
-7. Checkpoint detection: transitions to showingCheckpoint when StoryProgressMachine reaches checkpoint states
-8. Machine persists state to sessionStorage
-9. Comprehensive unit tests (30+ tests covering all transitions, guards, actions)
-10. All types exported from machine module
+2. Machine accepts `wordList` as input parameter (not a runtime state)
+3. Machine has core states: idle, showingIntro, processingBeat (with substates: showingNarrative, presentingChoice, playingGame, showingCheckpoint), finale
+4. Machine handles all beat types: GameBeat, ChoiceBeat, NarrativeBeat, CheckpointBeat
+5. LLM story generation stub created in `lib/story/story-generator.ts` (hardcoded templates, ready for OpenAI later)
+6. Generated story includes: Stage 1 beats (one per word, pre-determined order), Stage 2 extra beats (for low-confidence words)
+7. Stage 1: Words in story-coherent order (NOT random), each word appears once
+8. Stage 2: Mastery phase uses extra beats for low-confidence words or fixed sequence
+9. Machine spawns `StoryProgressMachine` as child actor for checkpoint tracking
+10. Context includes: generatedStory, currentBeatIndex, wordStats, currentPhase, storyProgressActor
+11. Machine persists state to sessionStorage
+12. Comprehensive unit tests (40+ tests covering all beat types, transitions, guards, actions)
+13. All types exported from machine module
 
 ## Tasks / Subtasks
 
@@ -36,69 +39,86 @@ Draft
   - [ ] Create file `index.ts` for exports
   - [ ] Add types to `types/story.ts`
 
+- [ ] Define beat type interfaces
+  - [ ] `GameBeat` interface (type, id, narrative, word, gameType, stage)
+  - [ ] `ChoiceBeat` interface (type, id, narrative, question, options)
+  - [ ] `NarrativeBeat` interface (type, id, narrative)
+  - [ ] `CheckpointBeat` interface (type, id, checkpointNumber, narrative, celebrationEmoji, title)
+  - [ ] `StoryBeat` type union
+  - [ ] Export all types
+
 - [ ] Define machine context types
   - [ ] `StorySessionContext` interface
-  - [ ] `StoryBeat` interface
+  - [ ] `GeneratedStory` interface (stage1Beats, stage2ExtraBeats, stage2FixedSequence)
   - [ ] `WordStats` interface (confidence, errors, hints, time, streak)
   - [ ] `StorySessionEvent` type union
   - [ ] Export all types
 
 - [ ] Define machine states
-  - [ ] `idle` - Initial state
-  - [ ] `selectingWordList` - User picks word list
-  - [ ] `initializingStory` - Generate beats, spawn actors
+  - [ ] `idle` - Initial state (auto-generates story, spawns actors, loads intro)
   - [ ] `showingIntro` - Display story introduction
-  - [ ] `preparingBeat` - Select word + game mechanic
-  - [ ] `playingBeat` - User plays game
-  - [ ] `beatCompleted` - Process results, check for checkpoint
-  - [ ] `showingCheckpoint` - Display checkpoint screen
+  - [ ] `processingBeat` - Parent state with substates:
+    - [ ] `showingNarrative` - Display narrative beat
+    - [ ] `presentingChoice` - Display choice beat
+    - [ ] `playingGame` - User plays game beat
+    - [ ] `showingCheckpoint` - Display checkpoint celebration
   - [ ] `finale` - Story complete
 
 - [ ] Define machine events
-  - [ ] `WORD_LIST_SELECTED` - User chose word list
   - [ ] `START_STORY` - User clicked start from intro
-  - [ ] `BEAT_COMPLETED` - Game finished (includes result data)
+  - [ ] `NARRATIVE_SEEN` - User clicked continue from narrative beat
+  - [ ] `CHOICE_MADE` - User selected choice option (includes choice data)
+  - [ ] `GAME_COMPLETED` - Game finished (includes result data)
   - [ ] `CONTINUE_STORY` - Continue from checkpoint
   - [ ] `SKIP_CHECKPOINT` - Skip checkpoint screen
   - [ ] `RESTART_STORY` - Start over
 
-- [ ] Implement word selection algorithms
-  - [ ] Create `lib/story/word-selection.ts`
-  - [ ] `selectWordForAssessment()` - Random from unassessed words
-  - [ ] `selectWordForMastery()` - Prioritize by difficulty score
-  - [ ] `calculateDifficultyScore()` - Multi-factor difficulty calculation
-  - [ ] `weightedRandomSelect()` - Weighted selection for variety
-  - [ ] `initializeWordStats()` - Create initial stats for word
-  - [ ] `updateWordStats()` - Update after game completion
+- [ ] Create LLM story generation stub (AC: 5, 6)
+  - [ ] Create `lib/story/story-generator.ts`
+  - [ ] Create `StoryGenerationInput` interface
+  - [ ] Create `GeneratedStory` interface
+  - [ ] Implement `generateStory()` stub function
+  - [ ] Stub returns hardcoded template-based beats
+  - [ ] Generate Stage 1 beats (one per word in story order)
+  - [ ] Generate Stage 2 extra beats (placeholder Map)
+  - [ ] Generate Stage 2 fixed sequence (fallback)
+  - [ ] Include narrative, choice, game, and checkpoint beats
+  - [ ] Document TODOs for future OpenAI integration
+  - [ ] Export all interfaces and functions
 
-- [ ] Implement game mechanic selection
-  - [ ] Create `lib/story/game-selection.ts`
-  - [ ] `selectGameMechanic(word, context)` - Choose appropriate game
-  - [ ] Cycle through game types for variety
-  - [ ] Consider word characteristics (length, difficulty)
+- [ ] Implement word stats management (AC: 8)
+  - [ ] Create `lib/story/word-stats.ts`
+  - [ ] `initializeWordStats()` - Create initial stats for all words
+  - [ ] `updateWordStats()` - Update after game completion
+  - [ ] `calculateDifficultyScore()` - Multi-factor difficulty calculation
+  - [ ] `getWordsNeedingPractice()` - Identify low-confidence words for Stage 2
+  - [ ] Export all functions
 
 - [ ] Implement machine actions
-  - [ ] `setWordList` - Store selected word list
+  - [ ] `generateStory` - Call LLM stub with wordList input
   - [ ] `spawnStoryProgressActor` - Create child actor
-  - [ ] `generateStoryBeats` - Create 15-20 beat structure
   - [ ] `initializeWordStats` - Create stats map for all words
-  - [ ] `loadIntroContent` - Get intro from story content
-  - [ ] `selectWordAndGame` - Run word selection algorithm
-  - [ ] `updateWordStats` - Process game results
-  - [ ] `incrementBeatsCompleted` - Track progress
+  - [ ] `loadIntroContent` - Get intro from story content (Story 6.3)
+  - [ ] `loadCurrentBeat` - Get beat at currentBeatIndex
+  - [ ] `recordChoice` - Store user's choice selection
+  - [ ] `updateWordStatsAfterGame` - Process game results
+  - [ ] `advanceBeatIndex` - Move to next beat
   - [ ] `notifyStoryProgress` - Send GAME_COMPLETED to child
-  - [ ] `loadCheckpointData` - Get checkpoint content
+  - [ ] `loadCheckpointData` - Get checkpoint content from beat
   - [ ] `resetContinueDelay` - Reset continue button state
-  - [ ] `enableContinueButton` - Allow user to continue
+  - [ ] `enableContinueButton` - Allow user to continue (after 5s)
   - [ ] `acknowledgeCheckpoint` - Send CONTINUE_STORY to child
   - [ ] `skipCheckpoint` - Skip without notifying child
-  - [ ] `loadFinaleContent` - Get finale content
+  - [ ] `loadFinaleContent` - Get finale content (Story 6.3)
 
 - [ ] Implement machine guards
-  - [ ] `shouldShowCheckpoint` - Check if child is at checkpoint
-  - [ ] `shouldShowFinale` - Check if all words mastered OR beats exhausted
+  - [ ] `isGameBeat` - Check if current beat is GameBeat
+  - [ ] `isChoiceBeat` - Check if current beat is ChoiceBeat
+  - [ ] `isNarrativeBeat` - Check if current beat is NarrativeBeat
+  - [ ] `isCheckpointBeat` - Check if current beat is CheckpointBeat
+  - [ ] `shouldShowFinale` - Check if all beats exhausted or all words mastered
   - [ ] `hasMoreBeats` - Check if beats remaining
-  - [ ] `allWordsAssessed` - Check if assessment phase complete
+  - [ ] `shouldTransitionToStage2` - Check if Stage 1 complete
 
 - [ ] Implement state persistence
   - [ ] Save context to sessionStorage on state transitions
@@ -107,18 +127,20 @@ Draft
   - [ ] Handle Date serialization
 
 - [ ] Create comprehensive tests
-  - [ ] Test: Machine initializes correctly
-  - [ ] Test: Word list selection flow
-  - [ ] Test: Story initialization (spawn actor, generate beats)
+  - [ ] Test: Machine initializes with wordList input
+  - [ ] Test: Story generation stub creates beats
   - [ ] Test: Intro → first beat transition
-  - [ ] Test: Beat preparation (word + game selection)
-  - [ ] Test: Beat completion updates stats
-  - [ ] Test: Assessment phase (all words practiced once)
-  - [ ] Test: Mastery phase (prioritizes difficult words)
-  - [ ] Test: Checkpoint detection (5, 10, 15 games)
-  - [ ] Test: Checkpoint → next beat transition
-  - [ ] Test: Finale when all words mastered
-  - [ ] Test: Finale when beats exhausted
+  - [ ] Test: Narrative beat flow (shows narrative → NARRATIVE_SEEN → next beat)
+  - [ ] Test: Choice beat flow (presents choice → CHOICE_MADE → next beat)
+  - [ ] Test: Game beat flow (plays game → GAME_COMPLETED → updates stats → next beat)
+  - [ ] Test: Checkpoint beat flow (shows checkpoint → delayed continue → next beat)
+  - [ ] Test: Beat type guards work correctly
+  - [ ] Test: Stage 1 completes (all words practiced once in story order)
+  - [ ] Test: Stage 2 uses extra beats for low-confidence words
+  - [ ] Test: Stage 2 uses fixed sequence as fallback
+  - [ ] Test: Checkpoint detection at correct beats
+  - [ ] Test: Finale when all beats exhausted
+  - [ ] Test: Finale when all words mastered early
   - [ ] Test: State persistence and restoration
   - [ ] Test: All guards return correct values
   - [ ] Test: All actions update context correctly
@@ -128,38 +150,42 @@ Draft
 
 ### Machine Architecture
 
+**Key Changes from Original Design:**
+1. **No `selectingWordList` state** - wordList passed as machine input
+2. **No `initializingStory` state** - initialization happens in `idle` state entry
+3. **Beat types replace word selection** - LLM generates story with beat-level narrative
+4. **Stage 1 NOT random** - Words in story-coherent order for narrative flow
+5. **Hierarchical state structure** - `processingBeat` parent with beat-type substates
+
 ```typescript
 // machines/story/storySessionMachine.ts
 import { createMachine, assign, spawn } from 'xstate'
 import { storyProgressMachine } from '@/lib/story/machines/storyProgressMachine'
-import type { StorySessionContext, StorySessionEvent } from '@/types/story'
+import { generateStory } from '@/lib/story/story-generator'
+import type { StorySessionContext, StorySessionEvent, StoryBeat } from '@/types/story'
 
 export const storySessionMachine = createMachine({
   id: 'storySession',
   initial: 'idle',
   context: ({ input }) => ({
-    // Word list
-    wordList: null,
-    wordPool: [],
+    // Input (provided when machine is created)
+    wordList: input.wordList,      // WordList object
+    storyTheme: input.theme || 'space',
 
-    // Selection phase
-    currentPhase: 'assessment',
-    assessedWords: new Set<string>(),
-    wordStats: new Map<string, WordStats>(),
-
-    // Story beats
-    storyBeats: [],
-    totalBeats: 20,
+    // Generated story structure
+    generatedStory: null,          // GeneratedStory (stage1Beats, stage2ExtraBeats, stage2FixedSequence)
     currentBeatIndex: 0,
-    beatsCompleted: 0,
+    currentBeat: null,             // Current StoryBeat
 
-    // Current beat
-    currentWord: null,
-    currentGameType: null,
+    // Phase tracking
+    currentPhase: 'stage1',        // 'stage1' | 'stage2'
+
+    // Word stats tracking
+    wordStats: new Map<string, WordStats>(),
+    userChoices: [],               // Record of choice beats
 
     // Story integration
     storyProgressActor: null,
-    storyTheme: 'space',
 
     // Checkpoint data
     currentCheckpoint: null,
@@ -175,42 +201,206 @@ export const storySessionMachine = createMachine({
 
   states: {
     idle: {
-      on: {
-        WORD_LIST_SELECTED: {
-          target: 'initializingStory',
-          actions: 'setWordList'
-        }
-      }
-    },
-
-    initializingStory: {
+      // Entry: Generate story, spawn actors, load intro
       entry: [
+        'generateStory',           // Call LLM stub
         'spawnStoryProgressActor',
-        'generateStoryBeats',
         'initializeWordStats',
         'loadIntroContent'
       ],
       always: 'showingIntro'
     },
 
-    // ... other states
+    showingIntro: {
+      on: {
+        START_STORY: {
+          target: 'processingBeat',
+          actions: 'loadCurrentBeat'
+        }
+      }
+    },
+
+    processingBeat: {
+      // Determine which substate based on beat type
+      always: [
+        { guard: 'isNarrativeBeat', target: '.showingNarrative' },
+        { guard: 'isChoiceBeat', target: '.presentingChoice' },
+        { guard: 'isGameBeat', target: '.playingGame' },
+        { guard: 'isCheckpointBeat', target: '.showingCheckpoint' },
+        { target: '#storySession.finale' } // No more beats
+      ],
+
+      states: {
+        showingNarrative: {
+          on: {
+            NARRATIVE_SEEN: {
+              actions: 'advanceBeatIndex',
+              target: '#storySession.processingBeat' // Re-evaluate
+            }
+          }
+        },
+
+        presentingChoice: {
+          on: {
+            CHOICE_MADE: {
+              actions: ['recordChoice', 'advanceBeatIndex'],
+              target: '#storySession.processingBeat'
+            }
+          }
+        },
+
+        playingGame: {
+          on: {
+            GAME_COMPLETED: {
+              actions: [
+                'updateWordStatsAfterGame',
+                'notifyStoryProgress',
+                'advanceBeatIndex'
+              ],
+              target: '#storySession.processingBeat'
+            }
+          }
+        },
+
+        showingCheckpoint: {
+          entry: ['resetContinueDelay'],
+          on: {
+            CONTINUE_STORY: {
+              actions: ['acknowledgeCheckpoint', 'advanceBeatIndex'],
+              target: '#storySession.processingBeat'
+            },
+            SKIP_CHECKPOINT: {
+              actions: 'advanceBeatIndex',
+              target: '#storySession.processingBeat'
+            }
+          },
+          after: {
+            5000: {
+              actions: 'enableContinueButton'
+            }
+          }
+        }
+      }
+    },
+
+    finale: {
+      entry: 'loadFinaleContent'
+    }
   }
 })
 ```
 
-### Word Selection Algorithm
+### Beat Type System
 
-See [parent story architectural diagrams](./6.4.integrate-story-checkpoints.md) for full algorithm details.
+**All beats extend base interface:**
+```typescript
+interface BaseBeat {
+  type: 'game' | 'choice' | 'narrative' | 'checkpoint'
+  id: string
+  narrative: string  // Displayed to user
+}
+```
 
-**Phase 1: Assessment**
-- Random selection from unassessed words
-- Each word practiced at least once
-- Collects baseline data: confidence, errors, hints, time
+**Beat Types:**
 
-**Phase 2: Mastery**
-- Calculate difficulty score for each word
-- Factors: confidence, hints used, wrong letters, time, accuracy, recency, streak
-- Weighted random selection (bias toward difficult words, but maintain variety)
+1. **GameBeat** - User plays spelling game
+   ```typescript
+   type GameBeat = BaseBeat & {
+     type: 'game'
+     word: string
+     gameType: 'letterMatching' | 'wordBuilding' | 'multipleChoice'
+     stage: 1 | 2  // Assessment or Mastery
+   }
+   ```
+
+2. **ChoiceBeat** - User makes story decision
+   ```typescript
+   type ChoiceBeat = BaseBeat & {
+     type: 'choice'
+     question: string
+     options: [string, string]  // Two choices
+   }
+   ```
+
+3. **NarrativeBeat** - Pure story advancement
+   ```typescript
+   type NarrativeBeat = BaseBeat & {
+     type: 'narrative'
+     // Just narrative text, user clicks continue
+   }
+   ```
+
+4. **CheckpointBeat** - Major milestone celebration
+   ```typescript
+   type CheckpointBeat = BaseBeat & {
+     type: 'checkpoint'
+     checkpointNumber: 1 | 2 | 3
+     celebrationEmoji: string
+     title: string
+   }
+   ```
+
+### LLM Story Generation (Stub)
+
+**Current Implementation:** Hardcoded template-based generation
+**Future Implementation:** OpenAI API call to generate contextual story
+
+```typescript
+// lib/story/story-generator.ts
+
+interface StoryGenerationInput {
+  wordList: string[]
+  theme: string
+  targetBeats: number  // ~20 beats
+}
+
+interface GeneratedStory {
+  stage1Beats: StoryBeat[]           // One per word (story order)
+  stage2ExtraBeats: Map<string, StoryBeat[]>  // Extra beats per word
+  stage2FixedSequence: StoryBeat[]   // Fallback sequence
+}
+
+// STUB: Returns template-based beats
+export async function generateStory(input: StoryGenerationInput): Promise<GeneratedStory> {
+  // TODO: Replace with OpenAI API call
+  // Prompt: "Generate a {theme} adventure story with beats for these words: {wordList}"
+
+  const stage1Beats = input.wordList.map((word, index) => ({
+    type: 'game',
+    id: `game-${word}-stage1`,
+    narrative: `Your journey continues. Master the word "${word}"!`,
+    word,
+    gameType: 'letterMatching',
+    stage: 1
+  }))
+
+  // Add checkpoints at beats 5, 10, 15
+  // Add narrative/choice beats for variety
+
+  return {
+    stage1Beats,
+    stage2ExtraBeats: new Map(),
+    stage2FixedSequence: []
+  }
+}
+```
+
+### Stage 1 vs Stage 2
+
+**Stage 1 (Assessment):**
+- LLM generates coherent story with one beat per word
+- Words in **story-relevant order** (NOT random)
+- Example: "ROCKET" → "SPACE" → "ALIEN" → "PLANET" (follows narrative)
+- Each word practiced exactly once
+- Collects baseline stats: confidence, errors, time
+
+**Stage 2 (Mastery):**
+- System identifies low-confidence words from Stage 1
+- Two approaches:
+  1. Use `stage2ExtraBeats` - Pre-generated beats specific to each word
+  2. Use `stage2FixedSequence` - Generic sequence for remaining practice
+- Prioritizes difficult words
+- Continues until mastery or beat limit reached
 
 ### Dependencies
 
@@ -279,10 +469,48 @@ describe('StorySessionMachine', () => {
 })
 ```
 
+## Architectural Decision (2025-10-20)
+
+**Decision:** Implement beat-based narrative system with LLM story generation (stub initially, OpenAI later).
+
+**Key Changes from Original Design:**
+
+1. **Remove runtime states for initialization**
+   - No `selectingWordList` state - wordList is machine input
+   - No `initializingStory` state - happens in `idle` entry actions
+   - Cleaner separation: setup vs runtime
+
+2. **Beat type system replaces word selection**
+   - Four beat types: Game, Choice, Narrative, Checkpoint
+   - Each beat has contextual narrative from LLM
+   - State machine routes to correct substate based on beat type
+
+3. **Stage 1 uses story-coherent word order**
+   - NOT random selection
+   - LLM determines word sequence for narrative flow
+   - Example: "ROCKET" → "SPACE" → "ALIEN" (logical story progression)
+
+4. **LLM stub for incremental implementation**
+   - Start with hardcoded template-based generation
+   - Interface designed for future OpenAI integration
+   - Separate story: "Story 6.4a-LLM" will implement actual API calls
+
+5. **Hierarchical state machine structure**
+   - `processingBeat` parent state with beat-type substates
+   - Guards determine routing: `isGameBeat`, `isChoiceBeat`, etc.
+   - Cleaner than flat state machine with many transitions
+
+**Rationale:**
+- Beat-level narrative creates cohesive story experience
+- LLM generation enables dynamic, contextual content
+- Stub approach allows development to proceed without API keys
+- Hierarchical states reduce complexity and improve testability
+
 ## Change Log
 
 | Date | Version | Description | Author |
 |------|---------|-------------|--------|
+| 2025-10-20 | 2.0 | Major architectural refinement: Beat type system, LLM stub, removed init states, hierarchical state machine | Sarah (PO) |
 | 2025-10-20 | 1.0 | Initial substory created from parent Story 6.4 | James (Dev) |
 
 ## Dev Agent Record
